fix: height overflow

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -41,7 +41,7 @@ body:not(.admin).btn {
   }
 }
 .mh-100 {
-  min-height: 100vw;
+  min-height: 100vh;
 }
 code {
   color: $textOrange;
